--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>MPRB</title>
+    <title>Monumen Perjuangan Rakyat Bali</title>
   </head>
   <body width="100">
     <noscript>
-      <strong>We're sorry but MPRB doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
